fixing spacing of slideshow in theme#4
git-svn-id: https://plugins.svn.wordpress.org/jquery-colorbox/trunk@223645 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/themes/theme4/colorbox.css
+++ b/themes/theme4/colorbox.css
@@ -33,7 +33,7 @@
         #cboxLoadedContent{margin-bottom:20px;}
         #cboxTitle{position:absolute; bottom:0; left:0; text-align:center; width:100%; color:#999;}
         #cboxCurrent{position:absolute; bottom:0; left:100px; color:#999;}
-        #cboxSlideshow{position:absolute; bottom:0; right:42px; color:#444;}
+        #cboxSlideshow{position:absolute; bottom:0; right:70px; color:#444;}
         #cboxPrevious{position:absolute; bottom:0; left:0; color:#444;}
         #cboxNext{position:absolute; bottom:0; left:63px; color:#444;}
         #cboxLoadingOverlay{background:url(images/loading.gif) 5px 5px no-repeat #fff;}
